[gd_scene load_steps=13 format=3 uid="uid://o22ys2eyidp2"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_eqyss"]
[ext_resource type="AudioStream" uid="uid://cgbljwl8po6u5" path="res://beam.wav" id="2_a6b5k"]
[ext_resource type="AudioStream" uid="uid://dyi06rcb31fkr" path="res://chomper.wav" id="3_ffrlm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dt1yd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x615e"]
size = Vector2(16, 122)

[sub_resource type="Animation" id="Animation_we22m"]
resource_name = "beam"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [16.0, 20.0, 16.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emission_rect_extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, 1), Vector2(12, 1), Vector2(6, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0dwu"]
_data = {
"beam": SubResource("Animation_we22m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lkp3q"]
size = Vector2(16, 5)

[sub_resource type="Gradient" id="Gradient_tvxf7"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_srkvw"]
gradient = SubResource("Gradient_tvxf7")
width = 32
height = 32

[sub_resource type="Gradient" id="Gradient_ewfwj"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_715dy"]
gradient = SubResource("Gradient_ewfwj")
width = 32
height = 32

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_eqyss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_dt1yd")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.116741, 0.116741, 0.116741, 1)
polygon = PackedVector2Array(0, -10, 11, -10, 22, -7, 30, 0, 22, 8, 11, 10, 0, 10, -10, 10, -21, 7, -30, 0, -21, -7, -10, -10)

[node name="Beam" type="Area2D" parent="."]
gravity_space_override = 1
gravity_point_center = Vector2(2.08165e-12, -1)
gravity_direction = Vector2(2.08165e-12, -1)
gravity = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_x615e")

[node name="Line2D" type="Line2D" parent="Beam"]
points = PackedVector2Array(0, 10, 0, 137)
width = 18.419
default_color = Color(0, 1, 0, 0.498039)

[node name="BeamSound" type="AudioStreamPlayer2D" parent="Beam"]
stream = ExtResource("2_a6b5k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Beam"]
libraries = {
"": SubResource("AnimationLibrary_g0dwu")
}
autoplay = "beam"

[node name="CPUParticles2D" type="CPUParticles2D" parent="Beam"]
position = Vector2(0, 137)
amount = 32
lifetime = 0.51
preprocess = 1.0
speed_scale = 0.5
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(9.62855, 1)
direction = Vector2(2.08165e-12, -1)
spread = 15.5724
gravity = Vector2(2.08165e-12, -980)
angular_velocity_min = -15.0
angular_velocity_max = 15.0
angle_max = 90.0
color = Color(0, 1, 0, 1)

[node name="Chomper" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chomper"]
position = Vector2(0, 12.5)
shape = SubResource("RectangleShape2D_lkp3q")

[node name="ChompSound" type="AudioStreamPlayer2D" parent="Chomper"]
stream = ExtResource("3_ffrlm")

[node name="LifeLine" type="Line2D" parent="."]
position = Vector2(0, 2)
points = PackedVector2Array(0, -2, 0, -6)
width = 48.0
default_color = Color(0, 0.839216, 0, 1)

[node name="EnergyLine" type="Line2D" parent="."]
position = Vector2(0, 2)
points = PackedVector2Array(0, -2, 0, 2)
width = 48.0
default_color = Color(0, 0, 1, 1)

[node name="TooClose" type="RayCast2D" parent="."]
position = Vector2(-11, 10)
target_position = Vector2(2.08165e-12, 48)

[node name="CloseEnough" type="RayCast2D" parent="."]
position = Vector2(11, 10)
target_position = Vector2(2.08165e-12, 128)

[node name="LeftLight" type="PointLight2D" parent="."]
position = Vector2(-30, -0.160155)
scale = Vector2(0.65625, 0.320311)
color = Color(1, 0, 0, 1)
energy = 4.0
texture = SubResource("GradientTexture2D_srkvw")

[node name="RightLight" type="PointLight2D" parent="."]
position = Vector2(30, 0)
scale = Vector2(0.65625, 0.320311)
color = Color(1, 0, 0, 1)
energy = 4.0
texture = SubResource("GradientTexture2D_715dy")

[connection signal="body_entered" from="Chomper" to="." method="_on_chomper_body_entered"]
